brat/test/golden/error/inconsistentclauses.brat
f(Bool, Nat) -> Nat
f(b, n) = 1
f(b) = 2
